[fix]Fixed a bug that reduced the width of the user profile card on small screens by half. The full card is now displayed on mobile screens. // Solucionado un error que reducia el ancho de la card del perfil de usuario en pantallas pequeñas a la mitad. Ya se muestra la card completa en pantallas moviles.

--- a/src/Pages/PanelUsuario/PanelUsuario.css
+++ b/src/Pages/PanelUsuario/PanelUsuario.css
@@ -1,132 +1,158 @@
 .panelUsuarioEntero {
-    max-width: 100%;
-    height: 95vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .parteIzquierda {
-    width: 35%;
-    height: 100%;
-    background-color: #0d0d0d;
-  }
-  
-  .parteDerecha {
-    width: 65%;
-    height: 100%;
-    background-color: yellow;
-    background-image: url(../../../img/Captura\ desde\ 2023-07-26\ 02-57-08.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-  }
-  
-  .cardUsuario {
-    width: 100%;
-  }
-  
-  .card {
-    margin-top: 1em;
-    padding: 5em;
-  }
-  
-  .card-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #33b994;
-    border-radius: 2em;
-  }
-  
-  .card button {
-    margin-top: 1em;
-    background-color: gray;
-    border: 0;
-    color: black;
-    font-weight: bold;
-  }
-  
-  .card-body p {
-    margin-top: 1em;
-  }
-  
-  .card button:hover {
-    background-color: lightslategray;
-    scale: 1.1;
-    transition: 0.4s;
-  }
-  
-  .card button:not(:hover) {
-    transition: 0.3s;
-  }
-  
-  .modalUsuario {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: 9999; 
-  }
-  
+  max-width: 100%;
+  height: 95vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.parteIzquierda {
+  width: 35%;
+  height: 100%;
+  background-color: #0d0d0d;
+}
+
+.parteDerecha {
+  width: 65%;
+  height: 100%;
+  background-color: yellow;
+  background-image: url(../../../img/Captura\ desde\ 2023-07-26\ 02-57-08.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.cardUsuario {
+  width: 100%;
+}
+
+.card {
+  margin-top: 1em;
+  padding: 5em;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #33b994;
+  border-radius: 2em;
+}
+
+.card button {
+  margin-top: 1em;
+  background-color: gray;
+  border: 0;
+  color: black;
+  font-weight: bold;
+}
+
+.card button:hover {
+  background-color: lightslategray;
+  scale: 1.1;
+  transition: 0.4s;
+}
+
+.card button:not(:hover) {
+  transition: 0.3s;
+}
+
+.modalUsuario {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 9999;
+}
+
+.modal-contenido {
+  background-color: #fff;
+  padding: 2em;
+  border-radius: 2em;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  width: 90%;
+  max-width: 25em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative; /* Posición relativa para alinear la "x" */
+}
+
+/* "x" de cerrar el modal */
+.cerrar {
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  font-size: 1.5em;
+  cursor: pointer;
+}
+
+/* Pantallas grandes */
+@media (min-width: 769px) {
   .modal-contenido {
-    background-color: #fff;
-    padding: 2em;
-    border-radius: 2em;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    width: 90%;
-    max-width: 25em;
+    width: 35%;
+    max-width: 35em;
+    background-color: #33b994;
+  }
+
+  .modal-contenido form {
     display: flex;
     flex-direction: column;
-    align-items: center; 
-    position: relative; /* Posición relativa para alinear la "x" */
-  }
-  
-  /* "x" de cerrar el modal */
-  .cerrar {
-    position: absolute;
-    top: 1em;
-    left: 1em;
-    font-size: 1.5em;
-    cursor: pointer;
-  }
-  
-  /* Pantallas grandes */
-  @media (min-width: 769px) {
-    .modal-contenido {
-      width: 35%;
-      max-width: 35em;
-      background-color: #33b994;
-    }
-
-    .modal-contenido form {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    .modal-contenido label,
-    .modal-contenido input {
-      width: 100%;
-      border-radius: 0.5em;
-    }
-  
-    .modal-contenido button {
-      margin-top: 1em;
-      width: 60%;
-      border-radius: 0.5em;
-    }
+    align-items: flex-start;
   }
 
-  .modal-contenido button:hover {
-    background-color: green;
-    transition: 0.4s;
-    scale: 1.1;
+  .modal-contenido label,
+  .modal-contenido input {
+    width: 100%;
+    border-radius: 0.5em;
   }
+
+  .modal-contenido button {
+    margin-top: 1em;
+    width: 60%;
+    border-radius: 0.5em;
+  }
+}
+
+.modal-contenido button:hover {
+  background-color: green;
+  transition: 0.4s;
+  scale: 1.1;
+}
+
+/* Ajustar la card para ocupar toda la pantalla en pantallas pequeñas */
+@media (max-width: 768px) {
+    .panelUsuarioEntero {
+      flex-direction: column; /* Mostrar los elementos en columna */
+    }
   
+    .parteIzquierda {
+      height: 100%; /* Ocupar el 50% del alto de la pantalla */
+      width: 90%;
+      overflow-y: auto; /* Habilitar desplazamiento vertical si el contenido es más largo que el contenedor */
+      padding: 0;
+    }
+
+    .parteDerecha {
+        display: none; /* Ocultar la parte derecha en pantallas pequeñas */
+      }
+
+      .card-body {
+        width: 150%;
+      }  
+      .card {
+        display: flex;
+        align-items: center;
+
+      }
+
+      .lista-grupo-objeto {
+        margin-top: 0.5em;
+      }
+}
